# base-terraform

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: Makefile  README.md  main.tf
