[tool.poetry]
name = "base-terraform"
version = "0.1.0"
description = "A cookiecutter base terraform template to rapidly scaffold terraform projects."
authors = ["Olivier Bénard <olivier.benard@telecomnancy.net>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
